--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1610,7 +1610,7 @@ footer p {
 }
 #player-nav li {
   display: inline-block;
-  background: rgba(0, 200, 170, 0.4);
+  background: rgba(0, 184, 222, 0.6);
   height: 40px;
   width: 40px;
   line-height: 40px;
@@ -1625,10 +1625,10 @@ footer p {
   transition: all 0.2s cubic-bezier(0.42, 0, 0.58, 1);
 }
 #player-nav li:hover {
-  background: rgba(0, 200, 170, 0.8);
+  background: rgba(255, 255, 255, 0.8);
 }
 #player-nav li:hover a {
-  color: #FFFFFF;
+  color: #000;
 }
 #player-nav li a {
   display: block;
