Small style fix for thank you popup

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,6 +7,16 @@
 /* Styles that use classes within @layers */
 @import 'form.css';
 
+.thank-you-popup {
+  .swal2-html-container :is(div, p, span) {
+    @apply text-gray-800;
+  }
+
+  br + div > div > div {
+    background-color: theme('colors.gray.900') !important;
+  }
+}
+
 [data-hide]:not([data-hide='false']) {
   @apply hidden
 }
